# Snipdocs

./: README.md
C/: defer.h  dict.c  dict.h  map.h  str.c  str.h  strv.c  strv.h  vect.h
C++/: defer.h  disk_map.h  error.h  hashdb.h  luaxx.cpp  luaxx.h  msgpack.h  rpc.h  rpc_checkparams.h  stringtable.cpp  stringtable.h  to_integer.cpp  tuple_sequence.h  types.h  utils.cpp  utils.h
C++/FLTK/flx/: Fl_Flex.cpp  Fl_Flex.h  Fl_Grid.cpp  Fl_Grid.h  Fl_Wrap.h
C++/ImGui/: application.h
C/old/: str.h  strv.h  vect.c  vect.h
CMake/: CMakeLists.txt  CPMRapidJson.cmake  Embed.cmake  FLTK.cmake  FindMyModule.cmake  ImGui.cmake  QtQuick.cmake
Config/: clang-tidy
JS/: ProtonMail.user.js  utils.js
Lua/: class.lua
Lua/solarized_nvim/: init.lua  palette.lua  theme.lua
Python/: serve.py
Ruby/: bluetooth_rofi.rb  bluetooth_tanto.rb  device.rb  org.vifm.FileManager1.rb
